#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT(genpass, 1.3, dev@snth.eu)
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([config.h.in])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h string.h strings.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_CHECK_FUNCS([memset])

#AC_DEFINE_UNQUOTED([CONFDIR], ["$sysconfdir"], [Prefix option called to configure])

AC_CONFIG_FILES([Makefile
                 src/Makefile
		 man/Makefile
		 conf/Makefile])
AC_OUTPUT
